--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
-version: '3.1'
+version: '3.9'
 
 services:
+  redis:
+    image: 'redis:alpine'
+    container_name: redis
+    ports:
+      - '6379:6379'
   db:
-    image: postgres:12
+    image: supabase/postgres
     container_name: db
     restart: unless-stopped
     environment:
