--- a/.env.dev
+++ b/.env.dev
@@ -3,4 +3,6 @@ DB_PORT=5432
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_NAME=nuber-eats
+REDIS_HOST=localhost
+REDIS_PORT=6379
 SECRET_KEY=ru8BQHkXwR85dpnqnLlmysR8xllkh1mZ
