--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=prod nest start",
+    "start": "cross-env NODE_ENV=dev nest start",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -32,6 +32,7 @@
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "graphql": "^15.5.1",
+    "graphql-redis-subscriptions": "^2.4.0",
     "graphql-tools": "^7.0.5",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
