--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,6 @@ DB_NAME=nuber-eats
 REDIS_HOST=localhost
 REDIS_PORT=6379
 SECRET_KEY=ru8BQHkXwR85dpnqnLlmysR8xllkh1mZ
+ELASTICSEARCH_NODE=http://localhost:9200
+ELASTICSEARCH_USERNAME=elastic
+ELASTICSEARCH_PASSWORD=changeme
