--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "dependencies": {
     "@apollo/gateway": "^0.34.0",
+    "@elastic/elasticsearch": "^7.13.0",
     "@nestjs/common": "^8.0.2",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.2",
+    "@nestjs/elasticsearch": "^8.0.0",
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^8.0.2",
     "@nestjs/typeorm": "^8.0.1",
