--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   redis:
     image: 'redis:alpine'
-    container_name: redis
+    container_name: redis-translation
     ports:
       - '6379:6379'
   db:
