--- a/.env.dev
+++ b/.env.dev
@@ -9,3 +9,4 @@ SECRET_KEY=ru8BQHkXwR85dpnqnLlmysR8xllkh1mZ
 ELASTICSEARCH_NODE=http://localhost:9200
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=changeme
+GOOGLE_APPLICATION_CREDENTIALS=<you_creds>.json
