--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/gateway": "^0.34.0",
     "@elastic/elasticsearch": "^7.13.0",
+    "@google-cloud/translate": "^6.2.6",
     "@nestjs/common": "^8.0.2",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.2",
