--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql-tools": "^7.0.5",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^1.15.0",
     "lodash": "^4.17.21",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
