--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql-redis-subscriptions": "^2.4.0",
     "graphql-tools": "^7.0.5",
     "joi": "^17.4.1",
+    "json2yaml": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "kafkajs": "^1.15.0",
     "lodash": "^4.17.21",
