--- a/.env.dev
+++ b/.env.dev
@@ -9,4 +9,5 @@ SECRET_KEY=ru8BQHkXwR85dpnqnLlmysR8xllkh1mZ
 ELASTICSEARCH_NODE=http://localhost:9200
 ELASTICSEARCH_USERNAME=elastic
 ELASTICSEARCH_PASSWORD=changeme
-GOOGLE_APPLICATION_CREDENTIALS=<you_creds>.json
+SENTRY_DSN=<your_sentry_dsn>
+GOOGLE_APPLICATION_CREDENTIALS=./<your_creds>.json
