--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^8.0.2",
     "@nestjs/typeorm": "^8.0.1",
+    "@ntegral/nestjs-sentry": "^3.0.3",
+    "@sentry/node": "^6.11.0",
     "apollo-server-express": "^2",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
