using flyway official image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,17 @@ services:
     networks:
       - app-network
   flyway_postgres:
-    image: arojunior/flyway:5.2.4
-    command: 'wait-for-it --timeout=60 --strict db:5432 -- flyway migrate'
+    image: flyway/flyway
+    container_name: db_flyway
+    environment:
+      - FLYWAY_USER=root
+      - FLYWAY_PASSWORD=root
+      - FLYWAY_URL=jdbc:postgresql://db:5432/nuber-eats
+      - FLYWAY_INIT_SQL=CREATE SCHEMA IF NOT EXISTS flyway;
+      - FLYWAY_SCHEMAS=flyway,public
+      - FLYWAY_BASELINE_ON_MIGRATE=true
+    command: -locations=filesystem:/flyway/sql -connectRetries=60 migrate
     volumes:
-      - ./flyway/postgres/migrations/config:/flyway/conf
       - ./flyway/postgres/migrations/sql:/flyway/sql
     depends_on:
       - db
@@ -85,6 +92,7 @@ services:
 
   zookeeper:
     image: wurstmeister/zookeeper:latest
+    container_name: zookeeper
     ports:
       - 2181:2181
     volumes:
@@ -93,6 +101,7 @@ services:
       - app-network
   kafka:
     image: wurstmeister/kafka:2.12-2.5.0
+    container_name: kafka
     hostname: kafka
     #container_name: kafka
     ports:
@@ -115,6 +124,7 @@ services:
 
   kafkadrop:
     hostname: kafkadrop
+    container_name: kafkadrop
     image: obsidiandynamics/kafdrop:latest
     environment:
       - KAFKA_BROKERCONNECT=kafka:19092
