--- a/flyway/postgres/migrations/config/flyway.conf
+++ b/flyway/postgres/migrations/config/flyway.conf
@@ -1,4 +1,6 @@
 #flyway.driver=com.mysql.jdbc.Driver
+flyway.schemas=public # Comma-separated case-sensitive list of schemas managed by Flyway
 flyway.baselineOnMigrate=true
+flyway.connectRetries=60
 flyway.url=jdbc:postgresql://db:5432/nuber-eats
 flyway.password=root
